added ICMPC14 and old branding info

--- a/public/404.html
+++ b/public/404.html
@@ -176,7 +176,23 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/matching-music-to-brand/">Matching Music to Brand Personality: A Semantic Differential Tool for Measuring Emotional Space</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/animacy-proceedings/">Music, animacy, and rubato: what makes music sound human?</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/bebop-proceedings/">The Role of Idiomaticism and Affordances in Bebop Improvisation</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/wagner-irt/">Recognition of Leitmotives in Richard Wagner’s Music: An Item Response Theory Approach</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/aba-2015/">Music, Brands, &amp; Advertising: Testing What Works</a></li>
   </ul>
   
 
