--- a/public/project/computational-musicology/index.html
+++ b/public/project/computational-musicology/index.html
@@ -213,9 +213,12 @@
     
 
     <div class="article-style" itemprop="articleBody">
-      <p>As a music researcher, most of my projects orbit around the idea of music and memory.</p>
+      <p>Computational Musicology involves using computers to digitize musical data and then using powerful software to search through massive amounts of data that would be unfeasible to do by hand. I am particularly interested in using symbolic data to extract information from melodies that can be used to predict how well melodies are remembered and creating new data sets that others can use.</p>
 
-<p>MORE CONTENT HERE. ALSO FIND NEW PICTURE.</p>
+<p>One project involving creating new datasets involves curating a dataset of improvised jazz solos.
+In its current state, the corpus is encoded in **kern and has solos from Charlie Parker (~70), Clifford Brown (~80), as well as Dizzy Gillespie (~10).
+We are in the process of including data from Miles Davis, John Coltrane, as well as other artists.
+Though not publicly availible yet, the dataset will have both melodic as well as harmonic information and be easily indexed using the <a href="http://www.humdrum.org/" target="_blank">Humdrum</a> tool kit.</p>
 
     </div>
 
