--- a/public/publication_types/6/index.html
+++ b/public/publication_types/6/index.html
@@ -168,6 +168,13 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication/aba-2015/">Music, Brands, &amp; Advertising: Testing What Works</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
 
   
 
