--- a/public/index.html
+++ b/public/index.html
@@ -835,7 +835,7 @@ This is my first blog post on my fresh, new website. I&rsquo;ve been off the wor
           <div class="card-text">
             <h4><a href="/project/music-and-memory/" >Music and Memory</a></h4>
             <div class="card-desription">
-              <p>My main research interest is investigating what individual and musical factors contribute to how someone learns and remembers a melody. Not only do findings in this area have relevance for music perception, but they also have  implications for how aural skills are taught at the conservatory level of music education.</p>
+              <p>How do we learn to hear melodies?</p>
             </div>
           </div>
         </div>
