--- a/public/project/music-and-memory/index.html
+++ b/public/project/music-and-memory/index.html
@@ -213,9 +213,7 @@
     
 
     <div class="article-style" itemprop="articleBody">
-      <p>As a music researcher, most of my projects orbit around the idea of music and memory.</p>
-
-<p>MORE CONTENT HERE. ALSO FIND NEW PICTURE.</p>
+      <p>My main research interest is investigating what individual and musical factors contribute to how someone learns and remembers a melody. Not only do findings in this area have relevance for music perception, but they also have  implications for how aural skills are taught at the conservatory level of music education.</p>
 
     </div>
 
