--- a/public/404.html
+++ b/public/404.html
@@ -157,11 +157,7 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="/post/2017-11-15-counting-amsmt-tweets/">Looking for Musicologists on Twitter</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/looking-for-musicologists-on-twitter/">Looking for Musicologists on Twitter</a></li>
+    <li><a href="/post/looking-for-musicologists-on-twitter/">Looking For Musicologists on Twitter</a></li>
   </ul>
   
   <ul>
