--- a/public/404.html
+++ b/public/404.html
@@ -161,6 +161,10 @@
   </ul>
   
   <ul>
+    <li><a href="/post/calculating-imultisets-in-r/">Calculating iMultisets in R</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/2017-08-26-hello-world/">Hello, World!</a></li>
   </ul>
   
