--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/hire-me-as-a-data-scientist-part-i/">Hire Me (as a Data Scientist!), Part I</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/looking-for-musicologists-on-twitter/">Looking For Musicologists on Twitter</a></li>
   </ul>
   
