--- a/public/index.html
+++ b/public/index.html
@@ -765,7 +765,7 @@ His work has been funded by the UK’s Arts and Humanities Research Council, and
 
   <div class="article-style" itemprop="articleBody">
     
-    Background I read Medium blogs posts on “How to Become a Data Scientist” more often than I care to admit. Much of this comes from a fear that after doing all this work in the PhD and then hitting the Music Theory job market that I won’t fit the mold of the kind of theorist most schools want to hire. Not coming from one of five schools that seem to have a monopoly on the tenure track jobs can be a bit discouraging, but I also won’t deny that having regular 9-5 with a decent salary is pretty tempting after spending the vast majority of my twenties in school.
+    Background I read Medium blogs posts on “How to Become a Data Scientist” more often than I care to admit. Much of this comes from a fear that after doing all this work in the PhD and then hitting the Music Theory job market that I won’t fit the mold of the kind of theorist most schools want to hire. Not coming from one of five schools that seem to have a monopoly on the tenure track jobs can be a bit discouraging, but I also won’t deny that having a non-academic job with a regular 9-5 schedule and a decent salary is pretty tempting after spending the vast majority of my twenties in school.
     
   </div>
   <p class="read-more">
