--- a/public/index.html
+++ b/public/index.html
@@ -765,9 +765,10 @@ His work has been funded by the UK’s Arts and Humanities Research Council, and
 
   <div class="article-style" itemprop="articleBody">
     
-    Beer Reccomendation Continuing on from my earlier post, I’m now looking to tackle the question:
+    Continuing on from my earlier post, I’m now looking to tackle the question:
  If you had to pick 3 beers to recommend using only this data, which would you pick?
  This is a pretty open ended question, which is kind of fun. I also don’t really have a ton of experience (yet!) in recommendation systems, though I have done a little reading here or there on it.
+My goals in coming up with three beers to recommend were to:
     
   </div>
   <p class="read-more">
