--- a/public/index.html
+++ b/public/index.html
@@ -181,8 +181,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('/img/smalldavidheadshot.png');"></div>
-      <meta itemprop="image" content="/img/smalldavidheadshot.png">
+      <div class="portrait" style="background-image: url('/img/davidocean.png');"></div>
+      <meta itemprop="image" content="/img/davidocean.png">
       
 
       <div class="portrait-title">
