hmds draft 3 and 4

--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,14 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/hire-me-as-a-data-scientist-part-iv/">Hire Me (as a Data Scientist!), Part IV</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/hire-me-as-a-datascientist-part-iii/">Hire Me (as a Data Scientist!), Part III</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/hire-me-as-a-data-scientist-part-ii/">Hire Me (as a Data Scientist!), Part II</a></li>
   </ul>
   
