--- a/public/index.html
+++ b/public/index.html
@@ -784,7 +784,8 @@ His work has been funded by the UK’s Arts and Humanities Research Council, and
 
   <div class="article-style" itemprop="articleBody">
     
-    Since this is the last post, I’ll keep this short and sweet in terms of analysis. Though after having done all of this, I do have a few reflections I would like to share after doing the One-Size-Fits-All-Data-Science Interview that I have included at the end. Our last question to answer is:
+    Since this is the last post, I’ll keep this short and sweet in terms of analysis. Having done all of this, I do have a few reflections I would like to share after doing the One-Size-Fits-All-Data-Science Interview that I have included at the end.
+Our final question to answer is:
  Lastly, if I typically enjoy a beer due to its aroma and appearance, which beer style should I try?
     
   </div>
