--- a/public/index.html
+++ b/public/index.html
@@ -860,8 +860,8 @@ Our final question to answer is:
     
     Two questions down, two to go! For the third post I’ll explore the question:
  Which of the factors (aroma, taste, appearance, palette) are most important in determining the overall quality of a beer?
- Whereas the posts before were questions of sorting data, this is our first attempt to make some statistical models. In this case we’re going to be doing a bit of regression modeling.
-There are a ton of ways to tackle this problem.
+ Whereas the posts before were questions on sorting data, this is our first attempt to make some statistical models. In this case we’re going to be doing a bit of regression modeling.
+Of all the types of regression, there are a couple of ways to tackle this problem.
     
   </div>
   <p class="read-more">
