added scsmt talk

--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -180,6 +180,25 @@
             <li>
               <i class="fa-li fa fa-comment-o" aria-hidden="true"
                  style="color:#03396c;font-size:80%;padding-top:6px;"></i>
+              Root Interval Schemas in Rock Music
+              <p>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="/talk/scsmt-2018/">
+  Details
+</a>
+
+
+
+
+
+</p>
+            </li>
+            
+            <li>
+              <i class="fa-li fa fa-comment-o" aria-hidden="true"
+                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
               Who counts as a musician?
               <p>
 
