project managment post

--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/project-management-with-git-and-r/">Project Management with git and R</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/to-dos-and-boundaries/">To-Dos and Boundaries</a></li>
   </ul>
   
