fixed email address on main page

--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
         
         
         <li>
-          <a itemprop="sameAs" href="mailto:davidjohnbaker@gmail.com" target="_blank">
+          <a itemprop="sameAs" href="mailto:davidjohnbaker1@gmail.com" target="_blank">
             <i class="fa fa-envelope big-icon"></i>
           </a>
         </li>
