--- a/public/index.html
+++ b/public/index.html
@@ -1265,6 +1265,8 @@ My goals in coming up with three beers to recommend were to:
 <li>MUS 3621, Music Theory III</li>
 </ul>
 
+<p>For examples of past syllabi, please click the links above to be directed to my github!</p>
+
   </div>
 </div>
 
