teaching syllabi updated

--- a/public/index.html
+++ b/public/index.html
@@ -1265,7 +1265,7 @@ My goals in coming up with three beers to recommend were to:
 <li>MUS 3621, Music Theory III</li>
 </ul>
 
-<p>For examples of past syllabi, please click the links above to be directed to my github!</p>
+<p>For examples of past syllabi and course materials, please click <a href="http://www.github.com/davidjohnbaker1/teachingExamples" target="_blank">HERE</a>!</p>
 
   </div>
 </div>
