updated dissertation work and open uni talk

--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -180,6 +180,25 @@
             <li>
               <i class="fa-li fa fa-comment-o" aria-hidden="true"
                  style="color:#03396c;font-size:80%;padding-top:6px;"></i>
+              Modeling Melodic Dictation
+              <p>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="/talk/open-university-2018/">
+  Details
+</a>
+
+
+
+
+
+</p>
+            </li>
+            
+            <li>
+              <i class="fa-li fa fa-comment-o" aria-hidden="true"
+                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
               Examining Objective and Subjective Aspects of Musical Sophistication: Insights from General Fluid Intelligence and Working Memory Capacity
               <p>
 
