--- a/public/404.html
+++ b/public/404.html
@@ -213,6 +213,14 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="/publication/gmsi-replication-2018/">Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/emotion-replication-2018/">Decoding emotions in expressive music performance: A multi-lab replication and extension study</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/wagner-frontiers/">Perception of Leitmotives in Richard Wagner&#39;s Der Ring des Nibelungen</a></li>
   </ul>
   
