--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/cataloging-memories-with-music/">Cataloging Memories with Music</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/examining-musical-sophistication/">Examining Musical Sophistication</a></li>
   </ul>
   
