--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/sempre-grad-conference-2019/">Sempre Grad Conference, 2019</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/digital-representations/">Digital Representations</a></li>
   </ul>
   
