toynbee reflection post

--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/thank-you-toynbee/">Thank You, Toynbee</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/embracing-career-diversity/">Embracing Career Diversity</a></li>
   </ul>
   
