masters music cog post

--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/thoughts-on-doing-a-master-s-degree-in-music-science/">Thoughts on Doing a Master&#39;s Degree in Music Science</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/thank-you-toynbee/">Thank You, Toynbee</a></li>
   </ul>
   
@@ -245,7 +249,7 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="/publication/gmsi-replication-2018/">Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index</a></li>
+    <li><a href="/publication/gmsi-replication-2018/">Examining Musical Sophistication: A replication and theoretical commentary of the Goldsmiths Musical Sophistication Index</a></li>
   </ul>
   
   <ul>
