--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -197,7 +197,7 @@
 
         <div class="grid-sizer col-md-12 isotope-item pubtype-2">
           <i class="fa fa-file-text-o" aria-hidden="true"
-             style="color:#03396c;font-size:80%;padding-top:6px; padding-right: 10px;"></i>Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index
+             style="color:#03396c;font-size:80%;padding-top:6px; padding-right: 10px;"></i>Examining Musical Sophistication: A replication and theoretical commentary of the Goldsmiths Musical Sophistication Index
           <p>
 
 
