--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -175,7 +175,7 @@
   
   
   <div>
-    <h2><a href="/publication/gmsi-replication-2018/">Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index</a></h2>
+    <h2><a href="/publication/gmsi-replication-2018/">Examining Musical Sophistication: A replication and theoretical commentary of the Goldsmiths Musical Sophistication Index</a></h2>
     <div class="article-style">
       
     </div>
