--- a/public/publication/gmsi-replication-2018/index.html
+++ b/public/publication/gmsi-replication-2018/index.html
@@ -56,7 +56,7 @@
 
   
 
-  <title>Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index | David John Baker</title>
+  <title>Examining Musical Sophistication: A replication and theoretical commentary of the Goldsmiths Musical Sophistication Index | David John Baker</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -173,7 +173,7 @@
 
 
   <div class="container pub-title">
-    <h1 itemprop="name">Examining Musical Sophistication: A replication of the Goldsmiths Musical Sophistication Index</h1>
+    <h1 itemprop="name">Examining Musical Sophistication: A replication and theoretical commentary of the Goldsmiths Musical Sophistication Index</h1>
     <span class="pub-authors" itemprop="author">
       
       D Baker, J Ventura, M Calamia, D Shanahan, E Elliott
@@ -192,28 +192,28 @@
     </li>
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Examining%20Musical%20Sophistication%3a%20A%20replication%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index&amp;url=%2fpublication%2fgmsi-replication-2018%2f"
+         href="https://twitter.com/intent/tweet?text=Examining%20Musical%20Sophistication%3a%20A%20replication%20and%20theoretical%20commentary%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index&amp;url=%2fpublication%2fgmsi-replication-2018%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fgmsi-replication-2018%2f&amp;title=Examining%20Musical%20Sophistication%3a%20A%20replication%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fgmsi-replication-2018%2f&amp;title=Examining%20Musical%20Sophistication%3a%20A%20replication%20and%20theoretical%20commentary%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fgmsi-replication-2018%2f&amp;title=Examining%20Musical%20Sophistication%3a%20A%20replication%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fgmsi-replication-2018%2f&amp;title=Examining%20Musical%20Sophistication%3a%20A%20replication%20and%20theoretical%20commentary%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Examining%20Musical%20Sophistication%3a%20A%20replication%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index&amp;body=%2fpublication%2fgmsi-replication-2018%2f">
+         href="mailto:?subject=Examining%20Musical%20Sophistication%3a%20A%20replication%20and%20theoretical%20commentary%20of%20the%20Goldsmiths%20Musical%20Sophistication%20Index&amp;body=%2fpublication%2fgmsi-replication-2018%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
