--- a/public/talk/open-university-2018/index.html
+++ b/public/talk/open-university-2018/index.html
@@ -244,7 +244,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
-            <a href="https://www.sc.edu/study/colleges_schools/music/concerts_and_events/bernstein_mass/bernstein_public_music_discourse/" target="_blank">
+            <a href="http://www9.open.ac.uk/mct-cc/news/school-seminar-modeling-melodic-dictation" target="_blank">
             Invited Speaker: Open University Research Seminar
             </a>
           </div>
