--- a/public/project/music-and-memory/index.html
+++ b/public/project/music-and-memory/index.html
@@ -228,68 +228,19 @@
     <div class="article-style" itemprop="articleBody">
       
 
-<p>All students pursuing a Bachelor&rsquo;s degree in Music from universities accredited by the National
-Association of Schools of Music must learn to take melodic dictation.
-This skill is a demanding process that requires students to listen to a melody, retain it in memory, and then use their knowledge of Western musical notation to recreate the mental image of the melody on paper in a limited time frame.
-For many, becoming proficient at this task is at the core of developing their aural skills.</p>
-
-<h2 id="structure-and-highlights-of-the-dissertation">Structure and Highlights of the Dissertation</h2>
-
-<p>In my dissertation I investigate factors thought to contribute to how people learn melodies by drawing on my experience from both cognitive psychology and computational musicology.
-I am currently in the process of writing and welcome any thoughts of questions on the research!
-Below I outline the main goals of each chapter along with methods and novel findings from the research:</p>
-
-<ul>
-<li>Chapter I: Background and Theoretical Rationale
-
-<ul>
-<li>Establishes why tools from computational musicology and cognitive psychology are best suited to answer questions about melodic dictation.</li>
-<li>Catalogs and taxonomizes features thought to contribute to melodic dictation</li>
-<li>Argues for polymorphic view of modeling musical ability</li>
-</ul></li>
-<li>Chapter II: History and Mental Representation
-
-<ul>
-<li>Reviews history and current state of aural skills pedagogy</li>
-<li>Asserts historical questions of aural skills pedagogy can be better understood by recontextualizing them as questions of mental representation of musical material</li>
-</ul></li>
-<li>Chapter III: Insights from Cognitive Psychology
-
-<ul>
-<li>Uses cross-sectional experimental design to investigate individual abilities thought to contribute to tasks of musical perception</li>
-<li>Data analyzed using structural equation modeling</li>
-<li>Findings suggest working memory capacity to be good predictor in tasks of musical perception</li>
-</ul></li>
-<li>Chapter IV: Computational Features
-
-<ul>
-<li>Asserts that computationally abstracted features from melodies can be used as quantitative stand in for musical intuitions</li>
-<li>Discusses how these features can be used to help aural skills pedagogues determine difficulty of melodies</li>
-</ul></li>
-<li>Chapter V: Dictation Corpus
-
-<ul>
-<li>Introduces new 600+ melody corpus</li>
-<li>Describes corpus&rsquo; features and possible uses</li>
-</ul></li>
-<li>Chapter VI: Experiments and Computational Model
-
-<ul>
-<li>Synthesizes all aforementioned factors in dual experiments investigating how predictive abstracted features are in experimental setting</li>
-<li>Posits computational model of melodic dictation</li>
-<li>Discusses how computational model can inform both perceptual research and inform pedagogical practice.</li>
-</ul></li>
-</ul>
+<p>This past year I successfully defending my Ph.D. dissertation <em>Modeling Melodic Dictation</em>.
+In a nutshell, I was interested in seeing how tools from computational musicology and cognitive psychology can help understand melodic dictation.
+In the research I was able to use all the domain expertise that comes along with doing a Ph.D. in Music Theory with the tools and techniques from music perception.
+Check out the dissertation <a href="https://digitalcommons.lsu.edu/gradschool_dissertations/4960/" target="_blank">here on the LSU Commons</a> and I also have the whole thing (though not the canonical copy!) hosted as interactive book online thanks to <a href="https://bookdown.org/yihui/bookdown/" target="_blank">bookdown</a>.
+<a href="https://davidjohnbaker1.github.io/document/" target="_blank">Find the online, mobile friendly copy here</a>.</p>
 
 <h2 id="dissertation-output">Dissertation Output</h2>
 
-<p>Full referencing to be added soon.</p>
-
 <ul>
-<li><strong>First author</strong> on article currently revised and resubmitted at <em>Musicae Scientiae</em> replicating the <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0089642" target="_blank">Goldsmiths Musical Sophistication Index</a> that offers additional commentary on the use of latent variables in music research. Argues for researchers to adopt a polymorphic view of musical ability when creating statistical models. Materials from first and third Chapter</li>
-<li><strong>First author</strong> on tentatively accepted book chapter with Routledge in <em>Companion to Aural Training in Music Education</em>. Materials from sixth Chapter.</li>
-<li><strong>First author</strong> on chapter in <em>Scholarly Approaches to Mathematical Music Theory</em>. Materials from sixth chapter</li>
-<li>Two <strong>First author</strong> International Conference on Music Perception and Cognition proceedings papers available on my <a href="https://www.researchgate.net/profile/David_Baker45" target="_blank">Research Gate</a>. Materials from third and sixth chapter.</li>
+<li><strong>First author</strong> on article accepted at <em>Musicae Scientiae</em> replicating the <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0089642" target="_blank">Goldsmiths Musical Sophistication Index</a> that offers additional commentary on the use of latent variables in music research. We argue for researchers to adopt a polymorphic view of musical ability when creating statistical models and question some of the assumptions that we as researchers make when we used latent variables in music psychology research.</li>
+<li><strong>Sole author</strong> on book chapter with Routledge in <em>Companion to Aural Training in Music Education</em> scheduled for publication in 2020.</li>
+<li><strong>First author</strong> on chapter in <em>Scholarly Approaches to Mathematical Music Theory</em>.</li>
+<li>Two <strong>First author</strong> International Conference on Music Perception and Cognition proceedings papers available on my <a href="https://www.researchgate.net/profile/David_Baker45" target="_blank">Research Gate</a>.</li>
 </ul>
 
     </div>
