--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -376,6 +376,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=U-iDi4M6BV8&amp;feature=youtu.be">
+  Video
+</a>
+
 
 </p>
             </li>
