updated teaching materials

--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -645,12 +645,37 @@ Here you can find:</p>
 <li>Listings of 
 <a href="#universitymaterials">university level courses I&rsquo;ve taught</a></li>
 </ul>
-<h3 id="datasciencelessonplans">Examples of Data Science Teaching Materials</h3>
+<h3 id="datasciencelessonplans">Data Science Teaching Materials</h3>
+<h4 id="lesson-plans">Lesson Plans</h4>
 <ul>
 <li>
 <a href="https://github.com/davidjohnbaker1/rstudio_certification_training" target="_blank" rel="noopener">Complete Lesson Plan used for RStudio Teaching Certification</a></li>
+</ul>
+<p>The following are examples of lesson material I wrote for Flatiron School&rsquo;s curriula, examples of documents I&rsquo;ve produced to help students, and examples of lesson plans:</p>
+<h4 id="curricula-writing">Curricula Writing</h4>
+<ul>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-r-to-python-an-overview" target="_blank" rel="noopener">R to Python: An Overview</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-installing-r" target="_blank" rel="noopener">Installing R and RStudio</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-r-base-ics-1" target="_blank" rel="noopener">R Base-ics I</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-r-base-ics-2" target="_blank" rel="noopener">R Base-ics II</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-intro-to-tidyverse" target="_blank" rel="noopener">Introduction to the Tidyverse</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-intro-to-ggplot2" target="_blank" rel="noopener">Introduction to ggplot2</a></li>
+<li>
+<a href="https://github.com/learn-co-curriculum/dsc-intro-to-ggplot2-lab" target="_blank" rel="noopener">Introduction to ggplot2 Lab</a></li>
+</ul>
+<h4 id="project-templates">Project Templates</h4>
+<ul>
 <li>
 <a href="https://github.com/learn-co-students/capstone-template-london-ds" target="_blank" rel="noopener">Project Template for Data Science Capstone</a></li>
+</ul>
+<h4 id="lesson-materials-and-plans">Lesson Materials and Plans</h4>
+<ul>
 <li>
 <a href="https://github.com/learn-co-students/probability-london-ds" target="_blank" rel="noopener">Intro to Inferential Statistics</a></li>
 <li>
