--- a/public/index.html
+++ b/public/index.html
@@ -694,10 +694,10 @@
     <h1>Biography</h1>
 
     <p>David John Baker is a music researcher and educator passionate about questions at the intersection of music and science.
-His research looks to understand how computational musicology and cognitive psychology can explore how music be used to learn about how people think.</p>
+His research looks to understand how computational musicology and cognitive psychology can explore how music be can used to learn about how people think.</p>
 <p>In his current role, he combines his love of teaching and research as 
 <a href="https://www.linkedin.com/in/david-john-baker-phd/" target="_blank" rel="noopener">Lead Instructor of Data Science</a> at Flatiron School in London, England.
-Previously he has worked both on music industry projects as a data scientist and has volunteered hundreds of hours working in the charity sector.</p>
+Previously he has worked both on music industry projects as a data scientist and has volunteered in the charity sector.</p>
 <blockquote>
 <p>This website is currently being migrated to a new version, so please excuse any mess you find while I update!</p>
 </blockquote>
