--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -718,6 +718,12 @@ Here you can find:</p>
   <iframe src="https://www.youtube.com/embed/OLbBwr6yono" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
+<p>Clustering Algorithms Crash Course</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/EKTVTfAXVIo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 <h3 id="universitymaterials">University Course Listings</h3>
 <ul>
 <li><strong>Foundations of Music Study</strong>
