--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -915,6 +915,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=T6G4m6_xFrc" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
