--- a/public/experience/index.html
+++ b/public/experience/index.html
@@ -2026,6 +2026,14 @@ In my current role, I teach students looking to change their careers how to ask 
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=T6G4m6_xFrc" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
