--- a/public/my-projects/cognition/index.html
+++ b/public/my-projects/cognition/index.html
@@ -909,7 +909,7 @@
       
     
     <li>
-      <a href="/files/DJB_long_cv_march_26_2020.pdf" >
+      <a href="/files/djb_nov_2020.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
