--- a/public/my-projects/music_industry_consultancy/index.html
+++ b/public/my-projects/music_industry_consultancy/index.html
@@ -817,7 +817,7 @@ A summary of our workshop can be found in their
       
     
     <li>
-      <a href="/files/DJB_long_cv_march_26_2020.pdf" >
+      <a href="/files/djb_nov_2020.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
