--- a/public/my-projects/public/index.html
+++ b/public/my-projects/public/index.html
@@ -866,7 +866,7 @@ A lot of this comes in the form of tweets and blogs, but here are some other pro
       
     
     <li>
-      <a href="/files/DJB_long_cv_march_26_2020.pdf" >
+      <a href="/files/djb_nov_2020.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
