--- a/public/talk/mtmw-compmodel-2019/index.html
+++ b/public/talk/mtmw-compmodel-2019/index.html
@@ -868,7 +868,7 @@
       
     
     <li>
-      <a href="/files/DJB_long_cv_march_26_2020.pdf" >
+      <a href="/files/djb_nov_2020.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
