--- a/public/academic/index.html
+++ b/public/academic/index.html
@@ -168,9 +168,8 @@
     
     <div>
         <p>
-        <p>As a researcher, most of the projects I work on result in either prose, a software repository, or a talk.</p>
-<p>There should be a corresponding blog post for many of my completed projects.
-I also blog about things I am thinking about to keep up my practice of writing regularly.</p>
+        <p>As a researcher, most of the projects I work on result in either prose, a software repository, or a talk.
+There should be a corresponding blog post for many of my completed projects.</p>
 <p>I&rsquo;ve tried to group these by my major research interests, but I find the <strong><a href="https://davidjohnbaker.rbind.io/tags/">tag system</a></strong> is much better for browsing.
 If you are looking for a specific paper, please check out the <a href="https://davidjohnbaker.rbind.io/tags/preprint/">preprint</a> tag or send me an email.</p>
 <p>My <strong><a href="https://scholar.google.com/citations?user=tigU2AkAAAAJ&amp;hl=en">Google Scholar</a></strong> page is here.</p>
