--- a/public/service/index.html
+++ b/public/service/index.html
@@ -169,10 +169,10 @@
     <div>
         <p>
         <p>It&rsquo;s important to give back to the communities that helped me get where I am today.</p>
-<h2 id="current">Current</h2>
-<p>I currently serve as the chair of the <a href="https://www.musicperception.org/">Society for Music Perception and Cognition&rsquo;s</a> <a href="https://musicperception.org/smpc-arec.html">Anti-Racism and Equity Committee</a>.</p>
-<h2 id="prior-services-committments">Prior Services Committments</h2>
+<h2 id="prior-service">Prior Service</h2>
 <ul>
+<li>Chair of the <a href="https://www.musicperception.org/">Society for Music Perception and Cognition&rsquo;s</a> <a href="https://musicperception.org/smpc-arec.html">Anti-Racism and Equity Committee</a>.</li>
+<li>Organizing</li>
 <li><a href="https://dlfm.web.ox.ac.uk/9th-international-conference-on-digital-libraries-for-musicology">Proceedings Chair for Digitial Libraries for Musicology Conference 2022</a></li>
 <li><a href="https://wimir.wordpress.com/mentoring-program/">Mentor on WiMIR Mentoring Program</a></li>
 <li><a href="https://www.musicperception.org/">Member of Society for Music Perception and Cognition&rsquo;s Anti-Racism Committee</a></li>
