--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -169,8 +169,8 @@
     <div>
         <p>
         <p>A major part of my professional identity is being an educator.
-Most of what I teach either has to do with music or science.</p>
-<p>A listing of my university level classroom teaching can be found on my <strong><a href="">current academic CV</a></strong>.</p>
+Most of what I teach either has to do with music or (data) science.</p>
+<p>A listing of my university level classroom teaching can be found on my <strong><a href="www.davidjohnbaker.rbind.io/Baker-CV-2023-01-04.pdf">current academic CV</a></strong>.</p>
 <p>I have also given several workshops on topics ranging from R Programming, to clustering algorithms, to recommendation systems.
 Examples of this type of teaching can be seen below.</p>
 <p>If you&rsquo;d like to hire me for a workshop or develop specific materials for you on a topic, <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BWorkshop%5D">please send me an email</a>.</p>
