--- a/public/industry/index.html
+++ b/public/industry/index.html
@@ -214,6 +214,9 @@ This has ranged from</p>
 <li>
 <p><a href="https://scholar.google.com/citations?view_op=view_citation&amp;hl=en&amp;user=tigU2AkAAAAJ&amp;citation_for_view=tigU2AkAAAAJ:YFjsv_pBGBYC">Testing What Works Audio Branding Workshop</a></p>
 </li>
+<li>
+<p><a href="">Audio Expert for 2023 EU Panasonic Re-Branding (to be added Autum 2023)</a></p>
+</li>
 </ul>
 <h2 id="learning-for-students">Learning for Students</h2>
 <p>I&rsquo;ve also done by best to try to catalog helpful advice for younger academics looking to break into this world via blog posts and workshop materials I have developed and given to various groups.
