--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -182,12 +182,13 @@ if (!doNotTrack) {
         <p>
         <p>A major part of my professional identity is being an educator.
 Most of what I teach either has to do with music or (data) science.</p>
-<p>A listing of my university level classroom teaching can be found on my <strong><a href="www.davidjohnbaker.rbind.io/Baker-CV-2023-01-04.pdf">current academic CV</a></strong>.</p>
+<p>A listing of my university level classroom teaching can be found on my <strong><a href="(www.davidjohnbaker.rbind.io/ref/DJB_Long_CV_20230805.pdf)">current academic CV</a></strong>.</p>
 <p>I have also given several workshops on topics ranging from R Programming, to clustering algorithms, to recommendation systems.
 Examples of this type of teaching can be seen below.</p>
 <p>If you&rsquo;d like to hire me for a workshop or develop specific materials for you on a topic, <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BWorkshop%5D">please send me an email</a>.</p>
 <h2 id="materials-created">Materials Created</h2>
 <ul>
+<li><a href="https://davidjohnbaker1.github.io/computational_models_of_music_perception_lecture/">Introduction to Computational Models of Music Perception and Cognition (1.5 hr lecture)</a></li>
 <li><a href="https://github.com/davidjohnbaker1/issues_with_music_and_sciences">Issues with Music and Sciences (30 hours)</a></li>
 <li><a href="https://github.com/davidjohnbaker1/r_for_python_crash">Weekend Workshop to Learn Basics of Tidyverse in a Weekend (8 hours)</a></li>
 <li><a href="https://drive.google.com/drive/folders/15hVmkgOBJajCWRUo8jR_eK-CIvCtD0rN?usp=sharing">Slide Deck on Alt Ac for Grad Students (4 hours)</a></li>
