fix https on cv url

--- a/public/academic/index.html
+++ b/public/academic/index.html
@@ -185,7 +185,7 @@ There should be a corresponding blog post for many of my completed projects.</p>
 <p>I&rsquo;ve tried to group these by my major research interests, but I find the <strong><a href="https://davidjohnbaker.rbind.io/tags/">tag system</a></strong> is much better for browsing.
 If you are looking for a specific paper, please check out the <a href="https://davidjohnbaker.rbind.io/tags/preprint/">preprint</a> tag or send me an email.</p>
 <p>My <strong><a href="https://scholar.google.com/citations?user=tigU2AkAAAAJ&amp;hl=en">Google Scholar</a></strong> page is here.</p>
-<p>Here is a link to my <a href="www.davidjohnbaker.rbind.io/ref/DJB_Long_CV_20230805.pdf">academic CV as of 5th August 2023</a>.
+<p>Here is a link to my <a href="https://davidjohnbaker.rbind.io/ref/DJB_Long_CV_20230805.pdf">academic CV as of 5th August 2023</a>.
 You can access each open access publication by clicking a the link to it on the CV.</p>
 
         </p>
