--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -182,7 +182,7 @@ if (!doNotTrack) {
         <p>
         <p>A major part of my professional identity is being an educator.
 Most of what I teach either has to do with music or (data) science.</p>
-<p>A listing of my university level classroom teaching can be found on my <strong><a href="(www.davidjohnbaker.rbind.io/ref/DJB_Long_CV_20230805.pdf)">current academic CV</a></strong>.</p>
+<p>A listing of my university level classroom teaching can be found on my <strong><a href="https://davidjohnbaker.rbind.io//ref/DJB_Long_CV_20230805.pdf">current academic CV</a></strong>.</p>
 <p>I have also given several workshops on topics ranging from R Programming, to clustering algorithms, to recommendation systems.
 Examples of this type of teaching can be seen below.</p>
 <p>If you&rsquo;d like to hire me for a workshop or develop specific materials for you on a topic, <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BWorkshop%5D">please send me an email</a>.</p>
