major gutting for less text

--- a/public/industry/index.html
+++ b/public/industry/index.html
@@ -180,57 +180,26 @@ if (!doNotTrack) {
     
     <div>
         <p>
-        <p>I like to keep a finger on the pulse of all things <strong>data education</strong>, <strong>audio branding</strong>, and <strong>data science</strong>.
-This page will serve as a running portfolio of my work related to these topics.</p>
+        <p>I also am involved on project related to <strong>data education</strong>, <strong>audio branding</strong>, and <strong>data science</strong>.</p>
 <h2 id="data-education">Data Education</h2>
-<p>For the past few years, I have been involved in both the teaching and assessing in the area of data science in academic contexts.
-This began after teaching as Lead Instructor of Data Science at Flatiron School in London for a year.
-During this time I was certified as a <a href="https://education.rstudio.com/trainers/">Posit tidyverse instructor</a>.</p>
 <ul>
-<li><a href="https://github.com/davidjohnbaker1/rstudio_certification_training">Link to Certification</a></li>
+<li>I am a <a href="https://education.rstudio.com/trainers/">Posit tidyverse instructor</a>, here is my <a href="https://github.com/davidjohnbaker1/rstudio_certification_training"> certification</a></li>
+<li>I used to teach as Lead Instructor of Data Science at Flatiron School</li>
+<li>I sometimes assess Masters level, data science UK apprenticeships for <a href="www.dsw.co.uk">Doran Scott Williams</a></li>
 </ul>
-<p>Currently, I serve as an End Point Assessor for Level 7 (Master&rsquo;s) Research Scientist apprenticeships for <a href="www.dsw.co.uk">Doran Scott Williams</a>.
-I also assisted in creating the assessment criteria for this standard as well as their Level 3 Data Technician and Level 4 Data Analyst standards.</p>
 <h2 id="audio-branding">Audio Branding</h2>
-<p>For the past several years I have worked on many projects related to audio branding.
-This has ranged from</p>
 <ul>
-<li>publishing academic articles that answer questions such as
-<ul>
-<li>&ldquo;What makes an audio logo memorable?&rdquo;</li>
-<li>&ldquo;To what extent can music change how a customer views an advertisement?&rdquo;</li>
-</ul>
-</li>
-<li>acting as scientific lead on science centered branding projects</li>
-</ul>
-<p>Clients that I have worked with include MassiveMusic, CitizenM Hotels, Bose, Soundout, and GSK.</p>
-<ul>
-<li>
-<p><a href="https://www.erasedtapes.com/release/eratp120-various-artists-music-for-brainwaves">Music For Brainwaves</a></p>
-</li>
-<li>
-<p><a href="https://scholar.google.com/citations?view_op=view_citation&amp;hl=en&amp;user=tigU2AkAAAAJ&amp;citation_for_view=tigU2AkAAAAJ:u-x6o8ySG0sC">Matching Brand Identity to Music</a></p>
-</li>
-<li>
-<p><a href="https://scholar.google.com/citations?view_op=view_citation&amp;hl=en&amp;user=tigU2AkAAAAJ&amp;citation_for_view=tigU2AkAAAAJ:YFjsv_pBGBYC">Testing What Works Audio Branding Workshop</a></p>
-</li>
-<li>
-<p><a href="">Audio Expert for 2023 EU Panasonic Re-Branding (to be added Autum 2023)</a></p>
-</li>
+<li>I worked with CitizenM Hotels, Bose, and the Erased Tapes record label to help create <a href="https://www.erasedtapes.com/release/eratp120-various-artists-music-for-brainwaves">Music For Brainwaves</a></li>
+<li>I helped develop a tool to <a href="https://scholar.google.com/citations?view_op=view_citation&amp;hl=en&amp;user=tigU2AkAAAAJ&amp;citation_for_view=tigU2AkAAAAJ:u-x6o8ySG0sC">match brand identity to music</a> that is was used as the basis for <a href="https://www.soundout.com/brandmatch-1">Soundout&rsquo;s Brand Match</a></li>
+<li>I assisted running the <a href="https://scholar.google.com/citations?view_op=view_citation&amp;hl=en&amp;user=tigU2AkAAAAJ&amp;citation_for_view=tigU2AkAAAAJ:YFjsv_pBGBYC">Testing What Works Audio Branding Workshop</a> at the annual audio branding awards.</li>
+<li>I designed scientific studies with <a href="">MassiveMusic</a> for <a href="">GSK</a> [Internal]</li>
+<li>I spoke as an expert in about sound and well-being for <a href="">Panasonic</a> [Internal]</li>
 </ul>
 <h2 id="learning-for-students">Learning for Students</h2>
-<p>I&rsquo;ve also done by best to try to catalog helpful advice for younger academics looking to break into this world via blog posts and workshop materials I have developed and given to various groups.
-You&rsquo;ll find these materials below.</p>
 <ul>
-<li>
-<p><a href="https://docs.google.com/presentation/d/1dZEO8i__Q6nZGzXccFkTEnwktxdAJYPhuVb1Lo0ekxk/edit?usp=sharing">Values to Value Slide Deck for Early Career Academics</a></p>
-</li>
-<li>
-<p><a href="https://davidjohnbaker.rbind.io/posts/2022-05-05-considering-plan-d-data-science-after-academia/">AMP Talk on Data Science after Academia</a></p>
-</li>
-<li>
-<p><a href="https://davidjohnbaker.rbind.io/posts/2020-06-09-life-after-a-phd-in-systematic-musicology-how-you-might-prepare-for-industry/life-after-a-phd-in-systematic-musicology-how-you-might-prepare-for-industry/">Preparing for Industry after Sysematic Musicology</a></p>
-</li>
+<li><a href="https://docs.google.com/presentation/d/1dZEO8i__Q6nZGzXccFkTEnwktxdAJYPhuVb1Lo0ekxk/edit?usp=sharing">Values to Value Slide Deck for Early Career Academics</a></li>
+<li><a href="https://davidjohnbaker.rbind.io/posts/2022-05-05-considering-plan-d-data-science-after-academia/">AMP Talk on Data Science after Academia</a></li>
+<li><a href="https://davidjohnbaker.rbind.io/posts/2020-06-09-life-after-a-phd-in-systematic-musicology-how-you-might-prepare-for-industry/life-after-a-phd-in-systematic-musicology-how-you-might-prepare-for-industry/">Preparing for Industry after Sysematic Musicology</a></li>
 </ul>
 <h2 id="hire-me">Hire Me</h2>
 <p>If you&rsquo;d like to hire me as a consultant on an upcoming project, please <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BConsultancy%20Inquiry%5D">email me</a>.</p>
