--- a/public/academic/index.html
+++ b/public/academic/index.html
@@ -180,13 +180,17 @@ if (!doNotTrack) {
     
     <div>
         <p>
-        <p>As a researcher, most of the projects I work on result in either prose, a software repository, or a talk.
-There should be a corresponding blog post for many of my completed projects.</p>
-<p>I&rsquo;ve tried to group these by my major research interests, but I find the <strong><a href="https://davidjohnbaker.rbind.io/tags/">tag system</a></strong> is much better for browsing.
-If you are looking for a specific paper, please check out the <a href="https://davidjohnbaker.rbind.io/tags/preprint/">preprint</a> tag or send me an email.</p>
-<p>My <strong><a href="https://scholar.google.com/citations?user=tigU2AkAAAAJ&amp;hl=en">Google Scholar</a></strong> page is here.</p>
-<p>Here is a link to my <a href="https://davidjohnbaker.rbind.io/ref/DJB_Long_CV_20230805.pdf">academic CV as of 5th August 2023</a>.
-You can access each open access publication by clicking a the link to it on the CV.</p>
+        <p>For a list of my publications, see my <strong><a href="https://scholar.google.com/citations?user=tigU2AkAAAAJ&amp;hl=en">Google Scholar</a></strong>.</p>
+<p>If a working paper or pre-print interests you that is listed on my <a href="https://davidjohnbaker.rbind.io/ref/baker_resume_20231109.pdf">CV</a>, please get in touch and I will be happy to send you whatever materials I can.</p>
+<p>Over the next few weeks, I will be centralizing resources related to my academic work below.</p>
+<h2 id="projects">Projects</h2>
+<ul>
+<li>Measuring the Eurovision Song Contest: A Living Dataset for Real-World MIR
+<ul>
+<li><a href="https://archives.ismir.net/ismir2023/paper/000097.pdf">paper</a>, <a href="https://github.com/Amsterdam-Music-Lab/mirovision#measuring-the-eurovision-song-contest-a-living-dataset-for-real-world-mir">code</a>, <a href="https://github.com/Spijkervet/eurovision-dataset">data</a></li>
+</ul>
+</li>
+</ul>
 
         </p>
     </div>
