--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -181,11 +181,8 @@ if (!doNotTrack) {
     <div>
         <p>
         <p>A major part of my professional identity is being an educator.
-Most of what I teach either has to do with music or (data) science.</p>
-<p>A listing of my university level classroom teaching can be found on my <strong><a href="https://davidjohnbaker.rbind.io//ref/DJB_Long_CV_20230805.pdf">current academic CV</a></strong>.</p>
-<p>I have also given several workshops on topics ranging from R Programming, to clustering algorithms, to recommendation systems.
-Examples of this type of teaching can be seen below.</p>
-<p>If you&rsquo;d like to hire me for a workshop or develop specific materials for you on a topic, <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BWorkshop%5D">please send me an email</a>.</p>
+Below is a collection of materials related to my teaching.</p>
+<p>If you&rsquo;d like to hire me for a workshop <a href="mailto:davidjohnbaker1@gmail.com?subject=%5BWorkshop%5D">please send me an email</a>.</p>
 <h2 id="materials-created">Materials Created</h2>
 <ul>
 <li><a href="https://davidjohnbaker1.github.io/computational_models_of_music_perception_lecture/">Introduction to Computational Models of Music Perception and Cognition (1.5 hr lecture)</a></li>
