cv error beeht proj

--- a/public/academic/index.html
+++ b/public/academic/index.html
@@ -190,6 +190,11 @@ if (!doNotTrack) {
 <li><a href="https://archives.ismir.net/ismir2023/paper/000097.pdf">paper</a>, <a href="https://github.com/Amsterdam-Music-Lab/mirovision#measuring-the-eurovision-song-contest-a-living-dataset-for-real-world-mir">code</a>, <a href="https://github.com/Spijkervet/eurovision-dataset">data</a></li>
 </ul>
 </li>
+<li>Notes from a genome: what Beethoven&rsquo;s DNA teaches us about genetics
+<ul>
+<li><a href="https://aspredicted.org/fj2cu.pdf">pre-reg</a></li>
+</ul>
+</li>
 </ul>
 
         </p>
